--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "firebase": "^12.7.0",
-    "framer-motion": "^12.25.0",
+    "framer-motion": "^12.26.1",
     "lottie-web": "^5.13.0",
     "lucide-react": "^0.562.0",
+    "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
